--- a/index.html
+++ b/index.html
@@ -1,20 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-site-verification" content="Q8Z9UGOo12W6iNMjAKeC86wq4Wu6IEM8plWaLC8FXG4" />
-    <title>HELLO WORLD :)</title>
-</head>
-<body>
-    <h1>Hello World</h1>
-    <h2>I am Pingchuan Huang</h2>
-    <h3>Current WashU graduate student in MSCS.</h3>
-    <ul>
-        <li>
-            <a href="https://kriscris.github.io/ConvexHull-ChansAlgorithm/">Chan's Convex Hull Algorithm Demo</a>
-        </li>
-    </ul>
-</body>
-</html>
+WIP
